# ImageCodec

./: README.md
ImageCodecLib/: CMakeLists.txt  imgcodec.cpp  imgcodec.h
ImageCompression/: CMakeLists.txt  FileSelectorRow.qml  Main.qml  imagecodec.cpp  imagecodec.h  imageprovider.h  imagereader.cpp  imagereader.h  main.cpp
ImageCompressionConsole/: CMakeLists.txt  main.cpp
